# sweproj

./: .dockerignore  .gitignore  Cargo.toml  Makefile  Mini-EDR_Test_Document.docx.md  Mini-edr_SDD.docx.md  Mini_EDR_SRS.docx.md  README.md  config.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
contrib/: Dockerfile.dev  Vagrantfile
contrib/kernel-5.8/: profiles.json
crates/mini-edr-common/: Cargo.toml
crates/mini-edr-common/src/: config.rs  lib.rs
crates/mini-edr-daemon/: Cargo.toml
crates/mini-edr-daemon/examples/: perf_harness.rs
crates/mini-edr-daemon/src/: lib.rs  logging.rs  main.rs  platform.rs
crates/mini-edr-daemon/tests/: availability.rs  hot_reload.rs  json_log.rs  local_api.rs  threshold_fixtures.rs
crates/mini-edr-daemon/tests/support/: mod.rs
crates/mini-edr-detection/: Cargo.toml
crates/mini-edr-detection/benches/: performance.rs
crates/mini-edr-detection/src/: alert_generator.rs  error.rs  feature_manifest.rs  lib.rs  manager.rs  model.rs  ort_runtime.rs  tree_ensemble.rs
crates/mini-edr-detection/tests/: alert_generator.rs  inference_engine.rs  model_hash.rs  shared.rs
crates/mini-edr-detection/training/: requirements.txt
crates/mini-edr-pipeline/: Cargo.toml
crates/mini-edr-pipeline/src/: event_enricher.rs  lib.rs  proc_reader.rs  window.rs
crates/mini-edr-pipeline/tests/: ancestry.rs  correlation.rs  enrichment_warning_shape.rs  features.rs  stress.rs  windows.rs
crates/mini-edr-sensor/: Cargo.toml  build.rs
crates/mini-edr-sensor/ebpf/: Cargo.toml
crates/mini-edr-sensor/ebpf/.cargo/: config.toml
crates/mini-edr-sensor/ebpf/src/: main.rs  vmlinux.rs
crates/mini-edr-sensor/src/: bpf.rs  fuzzing.rs  kernel_metrics.rs  lib.rs  manager.rs  raw_event.rs  ringbuffer_consumer.rs
crates/mini-edr-sensor/tests/: bpf_programs.rs  kernel_metrics.rs  ringbuffer_consumer.rs  sensor_manager.rs
crates/mini-edr-tui/: Cargo.toml
crates/mini-edr-tui/examples/: launch_smoke.rs
crates/mini-edr-tui/src/: app.rs  lib.rs  model.rs  view.rs
crates/mini-edr-web/: Cargo.toml
crates/mini-edr-web/src/: lib.rs
crates/mini-edr-web/static/: app.css  app.js  index.html
demo/: PRESENTATION_SCRIPT.md  README.md  run_demo.sh
demo/expected_output/: phase1-bpftool.json  phase1-health.json  phase1-probes.json  phase2-health.json  phase2-live-events.json  phase2-live-process.json  phase3-alert.json  phase3-dashboard-alerts.json  phase3-process.json  phase4-after-reload.json  phase4-after-rollback.json  phase4-before-reload.json  phase4-rollback-log.json  phase5-health-after.json  phase5-health-before.json  phase5-helper-report.json  phase5-proc-after.json  phase5-proc-before.json  phase5-rss-samples.jsonl  phase5-summary.json  phase6-bpftool.json
demo/helpers/: demo_observer.py  live_workload.py
docs/: MISSION_SUMMARY.md
docs/milestones/: 01-foundation.md  02-sensor.md  03-pipeline.md  04-detection.md  05-alerting-api.md  06-tui.md  07-web.md  08-system-integration.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ringbuffer_deserialize.rs
scripts/: ci.sh  measure_platform_loc.sh  setcap.sh  test_core_portability.sh  test_kernel_matrix.py  test_kernel_matrix.sh
tests/cross/: full_flow.sh
tests/fixtures/: alert_corpus_test.sh  alert_log_test.sh  api_endpoints.sh  bpftool_prog_list_duplicate.txt  bpftool_prog_list_good.txt  bpftool_prog_list_missing.txt  bpftool_prog_list_noise.txt  burst_500k.sh  check_fork_storm_log.sh  connect_fault.sh  deep_chain.sh  expected-crates.txt  feature_vectors.py  fixture_runtime_lib.sh  fork_storm  fork_storm.rs  fork_storm_bad_cycle.ndjson  fork_storm_bad_partial_ratio.ndjson  fork_storm_sighup.sh  fork_storm_synthetic_daemon.ndjson  hot_reload_lib.sh  json_log_lib.sh  live_socket_holder.sh  log_rotation.sh  log_survival.sh  ntp_step.sh  run_sighup_swap_load.py  sighup_concurrent.sh  sighup_invalid.sh  sighup_partial_config.sh  sighup_swap.sh  sighup_threshold.sh  spawn_chain.sh  stale_socket.sh  stale_socket_recovery.sh  symlink_swap.sh  threaded_openat_helper.rs
tests/fixtures/benign/: idle_desktop.sh  kernel_compile.sh  nginx_serving.sh  run_all.sh
tests/fixtures/feature_vectors/: THRESHOLD_FIXTURES.md  below_threshold.json  cryptominer_emulator.json  exact_threshold.json  high_085.json  idle_desktop.json  kernel_compile.json  nginx_serving.json  port_scan.json  privesc_setuid.json  reverse_shell.json  threshold_065.json
tests/fixtures/malware/: cryptominer_emulator.sh  port_scan.sh  privesc_setuid.sh  reverse_shell.sh  run_all.sh
tests/perf/: bpftool_profile.sh  cpu_overhead.sh  e2e_latency.sh  live_connect_latency.rs  live_connect_load.rs  perf_lib.sh  rss_4h.sh  throughput_50k.sh
tests/system/: availability_lib.sh  cgroup_memory_hog.py  clean_shutdown.sh  lifecycle.sh  live_connect_spawner.py  live_event_correlation.sh  live_event_workload.rs  memory_pressure.sh  no_caps.sh  probe_reload.sh  reload_rollback.sh  soak.sh
tests/tui/: color_partition.sh  control_chars.sh  deep_tree.sh  detail_view.sh  exited_process.sh  keyboard_latency.sh  launch_smoke.sh  status_bar_updates.sh  timeline_scroll.sh
tests/web/: combined_filter.sh  csrf.sh  csrf_internal_dashboard.sh  dashboard_tree_lib.sh  deep_tree.sh  degraded_badge.sh  empty_timeline.sh  health_overview.sh  landing_smoke.sh  severity_filter.sh  time_filter.sh  tree_drilldown.sh  tree_optional_score.sh  tree_scroll_persists.sh  utf8_render.sh  ws_backpressure.sh  ws_client.py  ws_realtime.sh  ws_reconnect.sh  ws_storm.sh  xss_escape.sh
training/: __init__.py  feature_engineering.py  requirements.txt  schema.py  split_hygiene.py  train.py
training/scripts/: evaluate_holdout.py  verify_no_leakage.py  verify_onnx_schema.py
training/tests/: conftest.py  test_metrics_gate.py  test_schema.py  test_split_hygiene.py
