# Root Cargo workspace for Mini-EDR.
#
# The workspace is intentionally kept thin: subsystem crates own their runtime
# dependencies, while this file defines shared lint policy and path dependency
# aliases so every crate resolves the same local packages. This mirrors SDD §8.2
# and keeps the dependency graph auditable from `cargo metadata`.

[workspace]
members = [
    "crates/mini-edr-common",
    "crates/mini-edr-sensor",
    "crates/mini-edr-pipeline",
    "crates/mini-edr-detection",
    "crates/mini-edr-tui",
    "crates/mini-edr-web",
    "crates/mini-edr-daemon",
]
exclude = [
    # The kernel-side sensor package is built by `mini-edr-sensor` release builds
    # with nightly + build-std so the user-facing workspace remains the seven
    # crates mandated by SDD §8.2.
    "crates/mini-edr-sensor/ebpf",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
mini-edr-common = { path = "crates/mini-edr-common" }
mini-edr-sensor = { path = "crates/mini-edr-sensor" }
mini-edr-pipeline = { path = "crates/mini-edr-pipeline" }
mini-edr-detection = { path = "crates/mini-edr-detection" }
mini-edr-tui = { path = "crates/mini-edr-tui" }
mini-edr-web = { path = "crates/mini-edr-web" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Clippy evaluates group and individual lint priorities without respecting TOML
# order. The negative priority lets focused allows below override the broad
# pedantic/nursery groups while keeping `-D warnings` useful in every crate.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
