[package]
name = "mini-edr-common"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
regex = "1.11"
serde_json = "1.0"
tempfile = "3.13"

[lints]
workspace = true
