[package]
name = "mini-edr-detection"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mini-edr-common.workspace = true
ndarray = "0.17"
onnx-pb = "0.0.4"
ort = { version = "=2.0.0-rc.12", default-features = true, features = ["api-24"] }
prost = "0.5"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
