[package]
name = "mini-edr-pipeline"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mini-edr-common.workspace = true
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
