[package]
name = "mini-edr-sensor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
aya = "0.13.1"
libc = "0.2"
mini-edr-common.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
object = "0.36"

[features]
e2e = []

[lints]
workspace = true
