[package]
name = "mini-edr-sensor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
libc = "0.2"
mini-edr-common.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"

[dev-dependencies]
aya-obj = "0.2.1"
object = "0.36"

[features]
e2e = []

[lints]
workspace = true
