[package]
name = "mini-edr-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
crossterm = "0.28.1"
mini-edr-common.workspace = true
ratatui = { version = "0.30.0", features = ["crossterm_0_28"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
