[package]
name = "mini-edr-web"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
mini-edr-common.workspace = true
serde_json = "1"

[dev-dependencies]
regex = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
